hphp/hack/test/typecheck/class_pointers/dynamically_referenced.php
<?hh

<<__DynamicallyReferenced>>
class A {}
<<__DynamicallyReferenced()>>
class B {}
<<__DynamicallyReferenced(1)>>
class C {}
<<__DynamicallyReferenced("hello")>>
class D {}
<<__DynamicallyReferenced(3.14)>>
class E {}
<<__DynamicallyReferenced(false)>>
class F {}
<<__DynamicallyReferenced(1, 2)>>
class G {}
